--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,19 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	testImplementation 'com.revinate:assertj-json:1.2.0'
+	testImplementation 'org.assertj:assertj-core:3.8.0'
 }
 
 test {
 	useJUnitPlatform()
+}
+
+springBoot {
+	buildInfo()
 }
