--- a/.github/workflows/gradle-v0.yml
+++ b/.github/workflows/gradle-v0.yml
@@ -24,6 +24,8 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Install heroku jar plugin
+      run: heroku plugins:install java
     - name: Deploy to staging
       env: 
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
@@ -31,9 +33,11 @@ jobs:
       run: heroku jar:deploy --jdk 11 --jar build/libs/demo-0.0.1-SNAPSHOT.jar --app infinite-caverns-43687
     - name: Component Tests
       run: |
-        echo -n "Main page..." && echo "passed."
-#       echo -n "Smoke Test: main page..." && {
-#        test "$(curl --fail --silent https://infinite-caverns-43687.herokuapp.com/ | jq -r '.tip')" == "Do It Yourself!" && echo "passed." } || echo "failed. Bad main page"
+      echo -n "Main page...";
+      {
+       test "$(curl --fail --silent https://infinite-caverns-43687.herokuapp.com/ | jq -r '.tip')" == "Do It Yourself!" && echo "passed." 
+      } 
+       || echo "failed. Bad main page"
       
     - name: Deploy to production
       env: 
