--- a/.github/workflows/gradle-v0.yml
+++ b/.github/workflows/gradle-v0.yml
@@ -32,7 +32,7 @@ jobs:
         # heroku cli is installed
         run: heroku jar:deploy --jdk 11 --jar build/libs/demo-0.0.1-SNAPSHOT.jar --app infinite-caverns-43687
       - name: Component Tests
-        run: 'echo -n "Main page..."; { test "$(curl --fail --silent https://infinite-caverns-43687.herokuapp.com/ | jq -r ''.tip'')" == "Do It Yourself!" && echo "passed."} || echo "failed. Bad main page"'
+        run: 'echo -n "Main page..."; test "$(curl --fail --silent https://infinite-caverns-43687.herokuapp.com/ | jq -r ''.tip'')" == "Do It Yourself!" && echo "passed." || echo "failed. Bad main page"'
       - name: Deploy to production
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
