--- a/.github/actions/heroku-jar-deploy/Dockerfile
+++ b/.github/actions/heroku-jar-deploy/Dockerfile
@@ -1,6 +1,5 @@
 FROM node:12.19.0-alpine3.9
 
-RUN npm install -g heroku
-RUN heroku plugins:install java
+RUN npm install -g heroku && heroku plugins:install java
 
 ENTRYPOINT ["/usr/local/bin/heroku"]
