--- a/.github/actions/heroku-jar-deploy/action.yml
+++ b/.github/actions/heroku-jar-deploy/action.yml
@@ -25,6 +25,6 @@ runs:
     - --jdk
     - ${{ inputs.jdk }}
     - --jar
-    - ${{ inputs.jar-path }}
+    - /github/workspace/${{ inputs.jar-path }}
     - --app
     - ${{ inputs.app-name }}
