FIX: missing java in docker image

--- a/.github/actions/heroku-jar-deploy/Dockerfile
+++ b/.github/actions/heroku-jar-deploy/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:12.19.0-alpine3.9
 
+RUN apk add openjdk11 --repository=http://dl-cdn.alpinelinux.org/alpine/edge/community
 RUN npm install -g heroku
 
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
