--- a/.github/workflows/gradle-v1.yml
+++ b/.github/workflows/gradle-v1.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           heroku-api-key: ${{ secrets.HEROKU_API_KEY }}
           jdk: 11
-          jar-path: build/libs/demo-0.0.1-SNAPSHOT.jar
+          jar-path: build/libs/github-demo-0.0.1-SNAPSHOT.jar
           app-name: infinite-caverns-43687
       - name: Component Tests
         run: 'echo -n "Main page..."; test "$(curl --fail --silent https://infinite-caverns-43687.herokuapp.com/ | jq -r ''.tip'')" == "Do It Yourself!" && echo "passed." || echo "failed. Bad main page"'
@@ -38,5 +38,5 @@ jobs:
         with:
           heroku-api-key: ${{ secrets.HEROKU_API_KEY }}
           jdk: 11
-          jar-path: build/libs/demo-0.0.1-SNAPSHOT.jar
+          jar-path: build/libs/github-demo-0.0.1-SNAPSHOT.jar
           app-name: quiet-shelf-20036
